crates/swc/tests/tsc-references/propertyAndFunctionWithSameName_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var C = /*#__PURE__*/ function() {
    "use strict";
    function C() {
        swcHelpers.classCallCheck(this, C);
    }
    var _proto = C.prototype;
    _proto.x = function x() {
        return 1;
    };
    return C;
}();
var D = /*#__PURE__*/ function() {
    "use strict";
    function D() {
        swcHelpers.classCallCheck(this, D);
    }
    var _proto = D.prototype;
    _proto.x // error
     = function x(v) {};
    return D;
}();
